// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`init exist account 1`] = `
<Styled(Container)>
  <Styled(Content)>
    <Styled(Card)
      style={
        Object {
          "paddingBottom": 24,
        }
      }
    >
      <Styled(Item)
        stackedLabel={true}
      >
        <Styled(Label)>
          サイト名称
        </Styled(Label)>
        <Styled(Input)
          editable={false}
          key="site_name"
          onChangeText={[Function]}
          style={
            Object {
              "color": "#999",
            }
          }
          value="name"
        />
      </Styled(Item)>
      <Styled(Text)
        style={
          Object {
            "color": undefined,
            "fontSize": 12,
          }
        }
      />
      <Styled(Item)
        stackedLabel={true}
      >
        <Styled(Label)>
          サイトドメイン
        </Styled(Label)>
        <Styled(Input)
          autoCapitalize="none"
          editable={false}
          key="site_domain"
          keyboardType="url"
          onChangeText={[Function]}
          style={
            Object {
              "color": "#999",
            }
          }
          value="domain.eim.ricoh.com"
        />
      </Styled(Item)>
      <Styled(Text)
        style={
          Object {
            "color": undefined,
            "fontSize": 12,
          }
        }
      />
      <Styled(Item)
        style={
          Object {
            "marginBottom": 12,
            "marginTop": 12,
          }
        }
      >
        <Styled(Label)>
          認証方式
        </Styled(Label)>
        <Styled(PickerNB)
          enabled={false}
          iosIcon={
            <Styled(Icon)
              name="ios-arrow-down"
            />
          }
          key="auth-type"
          mode="dropdown"
          onValueChange={[Function]}
          selectedValue="password"
          style={Object {}}
          textStyle={
            Object {
              "color": "#999",
            }
          }
        >
          <Item
            label="パスワード"
            value="password"
          />
          <Item
            label="Office365認証"
            value="o365"
          />
        </Styled(PickerNB)>
      </Styled(Item)>
      <Styled(Button)
        block={true}
        disabled={false}
        onPress={[Function]}
        rounded={true}
        style={
          Object {
            "marginTop": 24,
          }
        }
        success={true}
      >
        <Styled(Text)>
          サインイン
        </Styled(Text)>
      </Styled(Button)>
    </Styled(Card)>
  </Styled(Content)>
  <FloatingButton
    iconColor="white"
    iconName="create"
    iconType="Ionicons"
    key="edit_button"
    label=""
    marginHorizontal={32}
    marginVertical={32}
    onPress={[Function]}
    position="bottom-right"
    primaryButtonColor="#000099"
    primaryButtonSize={56}
    secondaryButtonSize={48}
  />
</Styled(Container)>
`;

exports[`init exist account, sing in 1`] = `
<Styled(Container)>
  <Styled(Content)>
    <Styled(Card)
      style={
        Object {
          "paddingBottom": 24,
        }
      }
    >
      <Styled(Item)
        stackedLabel={true}
      >
        <Styled(Label)>
          サイト名称
        </Styled(Label)>
        <Styled(Input)
          editable={false}
          key="site_name"
          onChangeText={[Function]}
          style={
            Object {
              "color": "#999",
            }
          }
          value="name"
        />
      </Styled(Item)>
      <Styled(Text)
        style={
          Object {
            "color": undefined,
            "fontSize": 12,
          }
        }
      />
      <Styled(Item)
        stackedLabel={true}
      >
        <Styled(Label)>
          サイトドメイン
        </Styled(Label)>
        <Styled(Input)
          autoCapitalize="none"
          editable={false}
          key="site_domain"
          keyboardType="url"
          onChangeText={[Function]}
          style={
            Object {
              "color": "#999",
            }
          }
          value="domain.eim.ricoh.com"
        />
      </Styled(Item)>
      <Styled(Text)
        style={
          Object {
            "color": undefined,
            "fontSize": 12,
          }
        }
      />
      <Styled(Item)
        style={
          Object {
            "marginBottom": 12,
            "marginTop": 12,
          }
        }
      >
        <Styled(Label)>
          認証方式
        </Styled(Label)>
        <Styled(PickerNB)
          enabled={false}
          iosIcon={
            <Styled(Icon)
              name="ios-arrow-down"
            />
          }
          key="auth-type"
          mode="dropdown"
          onValueChange={[Function]}
          selectedValue="password"
          style={Object {}}
          textStyle={
            Object {
              "color": "#999",
            }
          }
        >
          <Item
            label="パスワード"
            value="password"
          />
          <Item
            label="Office365認証"
            value="o365"
          />
        </Styled(PickerNB)>
      </Styled(Item)>
      <Styled(Spinner)
        color="#2F4172"
        key="sigin_in_spinner"
      />
    </Styled(Card)>
  </Styled(Content)>
  <FloatingButton
    iconColor="white"
    iconName="create"
    iconType="Ionicons"
    key="edit_button"
    label=""
    marginHorizontal={32}
    marginVertical={32}
    onPress={[Function]}
    position="bottom-right"
    primaryButtonColor="#000099"
    primaryButtonSize={56}
    secondaryButtonSize={48}
  />
</Styled(Container)>
`;

exports[`init new account 1`] = `
<Styled(Container)>
  <Styled(Content)>
    <Styled(Card)
      style={
        Object {
          "paddingBottom": 24,
        }
      }
    >
      <Styled(Item)
        stackedLabel={true}
      >
        <Styled(Label)>
          サイト名称
        </Styled(Label)>
        <Styled(Input)
          editable={true}
          key="site_name"
          onChangeText={[Function]}
          style={
            Object {
              "color": "#333",
            }
          }
          value=""
        />
      </Styled(Item)>
      <Styled(Text)
        style={
          Object {
            "color": undefined,
            "fontSize": 12,
          }
        }
      >
        サイト名称は必須です
      </Styled(Text)>
      <Styled(Item)
        stackedLabel={true}
      >
        <Styled(Label)>
          サイトドメイン
        </Styled(Label)>
        <Styled(Input)
          autoCapitalize="none"
          editable={true}
          key="site_domain"
          keyboardType="url"
          onChangeText={[Function]}
          style={
            Object {
              "color": "#333",
            }
          }
          value=""
        />
      </Styled(Item)>
      <Styled(Text)
        style={
          Object {
            "color": undefined,
            "fontSize": 12,
          }
        }
      >
        サイトドメインが正しくありません
      </Styled(Text)>
      <Styled(Item)
        style={
          Object {
            "marginBottom": 12,
            "marginTop": 12,
          }
        }
      >
        <Styled(Label)>
          認証方式
        </Styled(Label)>
        <Styled(PickerNB)
          enabled={true}
          iosIcon={
            <Styled(Icon)
              name="ios-arrow-down"
            />
          }
          key="auth-type"
          mode="dropdown"
          onValueChange={[Function]}
          selectedValue="password"
          style={Object {}}
          textStyle={
            Object {
              "color": "#333",
            }
          }
        >
          <Item
            label="パスワード"
            value="password"
          />
          <Item
            label="Office365認証"
            value="o365"
          />
        </Styled(PickerNB)>
      </Styled(Item)>
    </Styled(Card)>
  </Styled(Content)>
  <FloatingButton
    iconColor="white"
    iconName="md-checkmark"
    iconType="Ionicons"
    key="save_button"
    label=""
    marginHorizontal={32}
    marginVertical={32}
    onPress={[Function]}
    position="bottom-right"
    primaryButtonColor="#000099"
    primaryButtonSize={56}
    secondaryButtonSize={48}
  />
  <FloatingButton
    iconColor="white"
    iconName="close"
    iconType="Ionicons"
    key="cancel"
    label=""
    marginHorizontal={32}
    marginVertical={32}
    onPress={[Function]}
    position="bottom-left"
    primaryButtonColor="#000099"
    primaryButtonSize={56}
    secondaryButtonSize={48}
  />
</Styled(Container)>
`;
